# saas-billing

./: .editorconfig  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: auto-close-issues.yml  ci.yml  e2e.yml
docs/adr/: 001-stripe-over-custom.md
scripts/: close-issues.sh
tests/e2e/: test_smoke.py
tests/unit/: test_health.py
