[project]
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (>5s)",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".github/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
